[package]
name = "goroutine"
version = "0.1.0"
authors = [ "NobodyAwesomer" ]
edition = "2021"
description = "A fascimile of Golang's goroutine features (or at least, a shallow attempt at it). Email me if you would like to work together on this."
repository = "https://github.com/nobodyawesomer/goroutine"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.18"
syn = "1.0.96"
